pod-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test2-pod
  labels:
    app: test2app
spec:
  containers:
    - name: test2app
      image: deeprajiicaps/node-test2:t2v7   
      ports:
       - containerPort: 3000
