nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test2app-nodeport-service
  labels:
    app: test2app
spec:
  type: NodePort
  selector: 
    app: test2app
  ports:
    - name: http
      port: 3001 # service port
      targetPort: 3001 # containerport
      nodePort: 31231 # Nodeport
