test1-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1-deployment
  labels:
    app: test1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1
  template:
    metadata:
      labels:
        app: test1
    spec:
      containers:
        - name: test1
          image: deeprajiicaps/node-test1:t1v10
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: test1-nodeport-service
  labels:
    app: test1
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: test1
  ports:
    - port: 3000
      targetPort: 3000
