test2-deployment-and-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2-deployment
  labels:
    app: test2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test2
  template:
    metadata:
      labels:
        app: test2
    spec:
      containers:
        - name: test2
          image: deeprajiicaps/node-test2:t2v10
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: test2-nodeport-service
  labels:
    app: test2
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: test2
  ports:
    - port: 3001
      targetPort: 3001
